--- a/task_1/CMakeLists.txt
+++ b/task_1/CMakeLists.txt
@@ -4,6 +4,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
-include_directories(lib)
+set(SOURCE_F
+	${PROJECT_SOURCE_DIR}/lib/shape.cpp
+	${PROJECT_SOURCE_DIR}/lib/transform.cpp
+)
 
-add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.cxx)
+set(HEADER_F
+	${PROJECT_SOURCE_DIR}/lib/shape.hpp
+	${PROJECT_SOURCE_DIR}/lib/transform.hpp
+)
+
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.cxx ${SOURCE_F} ${HEADER_F})
